# pyapp

./: .gitignore  Dockerfile  Makefile  pyproject.toml
app/: main.py
app/middlewares/: request.py
backend/: Makefile  README.md  pyproject.toml
backend/app/: app.py
backend/app/core/: config.py
backend/app/routers/: health.py  login.py  setting.py
backend/app/service/: login.py
backend/tests/e2e/: conftest.py  test_health.py
backend/tests/service/: test_login.py
stepfunctions/: compose.yaml
web/: package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: index.css  main.tsx  router.tsx
web/src/components/button/: index.tsx
web/src/components/header/: index.tsx
web/src/components/stepbar/: index.tsx
web/src/components/table/: index.tsx
web/src/pages/: index.tsx
web/src/pages/404/: index.tsx
web/src/pages/about/: index.tsx
web/src/pages/step/: index.tsx
web/src/pages/table/: index.tsx
