[project]
name = "pyapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autopep8>=2.3.2",
    "fastapi[standard]>=0.115.6",
    "isort>=5.13.2",
    "mypy>=1.14.1",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app/main"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
